<resources>

    <string name="app_name">QCHelper</string>
    <string name="title_activity_main">Check cargo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_Search">Search</string>
    <string name="btn_CheckPic">Image</string>
    <string name="btn_CheckResult">Result</string>
    <string name="title_activity_check">Test items</string>
    <string name="Search_Hint">Please enter the OrderNo or StyleNo</string>
    <string name="title_activity_remark">Test results</string>
    <string name="btn_Ok">Ok</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Back">Back</string>
    <string name="title_activity_pic">Images</string>
    <string name="btn_GetPic">Photograph</string>
    <string name="Image_SuccessfullySaved">Image successfully saved</string>
    <string name="Image_FailSaved">Failed to save the picture</string>
    <string name="Image_CancelPicture">Cancel picture</string>
    <string name="title_activity_image_show">Photo Gallery</string>
    <string name="btn_DeleteImage">Delete</string>
    <string name="dialog_askinfo">OK to delete the current picture?</string>
    <string name="dialog_titile">Warning</string>
    <string name="menu_setting">Connection</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_setting">Connection</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="prompt_protnotnull">Please enter the server port.</string>
    <string name="conset_success">Connection is successfully set.</string>
    <string name="conset_noconset">Connection is not set, the set and then login.</string>
    <string name="conset_noserverset">The incomplete connection settings set and then login.</string>
    <string name="image_not_exists">Picture does not exist.</string>
    <string name="image_count_check">Each inspection items can only upload up to 15 pictures.</string>
    <string name="title_activity_conset">Connection</string>
    <string name="title_activity_login">Login</string>
    <string name="btn_sync">Sync data</string>
    <string name="login_title">Login</string>
    <string name="login_user_name_hint">Type your user name</string>
    <string name="login_password_hint">Type your password</string>
    <string name="login_succeed">Login succeed</string>
    <string name="login_failed">Login failed</string>
    <string name="login_user_or_pass_error">User or Password error</string>
    <string name="login_password_is_null">sorry, password is invalid, modify your password in erp system please.</string>
    <string name="login_user_name_lost">User name lost</string>
    <string name="login_password_lost">Password lost</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remember_password">Remeber password</string>
    <string name="main_need_login">Please login before!</string>
    <string name="main_sure_logout">Are you sure logout!</string>
    <string name="record_save_succeed">Save succeed!</string>
    <string name="record_save_failed">Save failed!</string>
    <string name="main_not_data_need_sync">Not data need sync!</string>
    <string name="main_sync_completed">Sync completed!</string>
    <string name="information_incomplete">Information incomplete!</string>
    <string name="process_wait">Process,waiting....</string>
    <string name="processing">Processing....</string>
    <string name="sync_failed">Sync failed!</string>
    <string name="wifi_inactive">Wifi Inactive!</string>
    <string name="network_inactive">Network Inactive!</string>
    <string name="not_record">not record!</string>
    <string name="have_records">have %1$d records</string>
    <string name="title_activity_camera">Camera</string>
    <string name="btn_Retake">Retake pictures</string>
    <string name="choose_camera">Choose to use the camera</string>
    <string name="using_in_camera">Using the built-in camera</string>
    <string name="using_app_camera">Using the camera application</string>
    <string name="title_activity_choose_camera">Camera options</string>

</resources>