<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    >

    <LinearLayout 
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <EditText
            android:id="@+id/user_id"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/login_user_name_hint"
            />
        
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:inputType="numberSigned"
            android:hint="@string/login_password_hint"
            />
        
    </LinearLayout>

        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"     
        >
    
        <Button
            android:id="@+id/login_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Ok"
            />
    
    </LinearLayout>
    
</LinearLayout>