<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:id="@+id/setting_liner_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView 
            android:id="@+id/txt_server_ip"
            android:text="@string/server_ip"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            />

        <EditText
            android:id="@+id/edt_server_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/setting_liner_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_liner_1"
            android:orientation="horizontal" >

        <TextView 
            android:id="@+id/txt_server_port"
            android:text="@string/server_port"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            />

        <EditText
            android:id="@+id/edt_server_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        </LinearLayout> 
        
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    style="@android:style/ButtonBar"
		    android:layout_alignParentBottom="true"  >
		       
		    <Button android:id="@+id/setting_ok" 
		        android:text="@string/btn_Ok"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
                android:layout_weight="1"
		        />
		    
		    <Button android:id="@+id/setting_cancel" 
		        android:text="@string/btn_Cancel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        />      
		</LinearLayout>        
        
    </RelativeLayout>

</LinearLayout>
